# Yukki-2.0

./: main.py  pyproject.toml
src/assistant/: cli.py
src/assistant/core/: dispatcher.py  skill_base.py
src/assistant/io/: asr_sr.py  tts.py
src/assistant/skills/: jokes_skill.py  open_site_skill.py  time_skill.py  wiki_skill.py
